<resources>
    <string name="app_name">Decisions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_text_schedule">This is schedule board</string>
    <string name="intro_text_waiting">This is waiting board</string>
    <string name="intro_text_feeling">This is feeling board</string>
    <string name="intro_text_library">This is library</string>
    <string name="menu_schedule_icon">Schedule</string>
    <string name="menu_waiting_icon">Waiting</string>
    <string name="menu_feeling_icon">Feeling</string>
    <string name="menu_library_icon">Library</string>
    <string name="thumbnail">thumbnail</string>
    <string name="list_schedule">List Schedule action</string>
    <string name="add_item">Add</string>
    <string name="waiting_text_subject">I am</string>
    <string name="waiting_text_temp">for</string>
    <string name="waiting_time">00:00</string>
    <string name="waiting_start">Start</string>
    <string name="waiting_reset">Reset</string>
    <string name="edit_timer">Edit timer</string>
    <string name="choose_image_text">Choose an image</string>
</resources>